Problem 1.3 replace spaces in a string (an array) with %20. An array has enough spaces at the end for this replacement.